version/0.38/_sources/api/solver/_autosummary/settings/methods_2.rst.txt
:orphan:

.. _methods_2:

methods
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.methods_2
    :show-inheritance:

.. rubric:: Attributes

====================================================================================================   =============================================================================================================================================================

Attribute                                                                                                                                                                                                                                                    Summary

====================================================================================================   =============================================================================================================================================================
:ref:`axisymmetric <axisymmetric>`                                                                                                                                                                                                              Axisymmetric object.

:ref:`p_v_coupling <p_v_coupling>`                                                                                                                                                                                            The pressure velocity coupling scheme.

:ref:`spatial_discretization <spatial_discretization>`                                                                                                                                                                               Spatial Discretization Schemes.

:ref:`spatial_discretization_parameters <spatial_discretization_parameters>`                                                                                                                                                Spatial discretization parameters group.

:ref:`pseudo_time_method <pseudo_time_method>`                                                                                                                                                                                        The pseudo time method object.

:ref:`transient_formulation <transient_formulation>`                                                                                                                                                                                          Transient formulation.

:ref:`unsteady_global_time <unsteady_global_time>`                                                                                                                                                          Enable/disable unsteady global-time-step solution model.

:ref:`accelerated_non_iterative_time_marching <accelerated_non_iterative_time_marching>`                                                                                                                     Enable/disable accelerated non-iterative time marching.

:ref:`convergence_acceleration_for_stretched_meshes <convergence_acceleration_for_stretched_meshes>`       Enable convergence acceleration for stretched meshes to improve the convergence of the implicit density based solver on meshes with high cell stretching.

:ref:`divergence_prevention <divergence_prevention>`                                                                                                                                                                               The divergence prevention object.

:ref:`expert <expert_6>`                                                                                                                                                                                                                              Expert object.

:ref:`frozen_flux <frozen_flux>`                                                                                                                                                                         Enable/disable frozen flux formulation for transient flows.

:ref:`high_order_term_relaxation <high_order_term_relaxation>`                                                                                                                                                                           High Order Relaxation Menu.

:ref:`multiphase_numerics <multiphase_numerics>`                                                                                                                                                                             The multiphase numerics options object.

:ref:`nb_gradient_boundary_option <nb_gradient_boundary_option>`                                                                                                                                                                                       Ggnb options.

:ref:`nita <nita>`                                                                                                                                                                                       Enable/disable Use of Noniterative Time Advancement Scheme.

:ref:`nita_expert_controls <nita_expert_controls>`                                                                                                                                                                                  The NITA expert controls object.

:ref:`overset <overset_3>`                                                                                                                                                                                                            Overset solver options object.

:ref:`phase_based_vof_discretization <phase_based_vof_discretization>`                                                                                                                                                               Phase-based vof discretization.

:ref:`reduced_rank_extrapolation <reduced_rank_extrapolation>`                                                                                                                         Enable/disable Reduced Rank Extrapolation method to accelerate solution time.

:ref:`reduced_rank_extrapolation_options <reduced_rank_extrapolation_options>`                                                                                                                                                   Reduced Rank Extrapolation options.

:ref:`use_limiter_in_time <use_limiter_in_time>`                                                                                                                      Use a limiter in the time discretization to reduce local over- or undershoots of the solution.

:ref:`vof_numerics <vof_numerics>`                                                                                                                                                                                                              VOF numeric options.

:ref:`warped_face_gradient_correction <warped_face_gradient_correction>`                                                                                                                                                     Warped-face-gradient-correction object.

:ref:`high_speed_numerics <high_speed_numerics>`                                                                                                                                                                                         High-speed-numerics object.

:ref:`species_disc_together <species_disc_together>`                                                                                                                                                        Enable/disable Set all species discretizations together.

:ref:`poor_mesh_robustness <poor_mesh_robustness>`                                                                                                                                                                                  The poor mesh robustness object.

:ref:`poor_mesh_numerics <poor_mesh_numerics>`                                                                                                                                                                                        The poor mesh numerics object.

:ref:`turbo_numerics <turbo_numerics>`                                                                                                                                                                                      Turbomachinery-specific numerics object.

====================================================================================================   =============================================================================================================================================================

.. rubric:: Methods

========================================================================   ===========================================

Method                                                                                                         Summary

========================================================================   ===========================================
:ref:`set_solution_methods_to_default <set_solution_methods_to_default>`       Set solution methods to default values.

:ref:`set_optimized_les_numerics <set_optimized_les_numerics>`                             Set optimized LES numerics.

========================================================================   ===========================================

.. rubric:: Included in:

==========================   =======================================================================================================================================

Parent                                                                                                                                                       Summary

==========================   =======================================================================================================================================
:ref:`solution <solution>`       Provides access to settings like solver controls, initialization, monitors, solution methods and others for running the simulation.

==========================   =======================================================================================================================================

